tests/fixtures/invalid/str_add_none.py
# Cannot add Str and None
x: str = "hello" + None
